FIX - removed columns limit and tablet view, add horizontal scroll

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -25,26 +25,35 @@
 }
 
 .kanban {
-    padding: 20px;
     width: 100%;
     height: 100vh;
     box-sizing: border-box;
     background: url('../img/background.jpg') no-repeat;
     background-size: cover;
+    overflow: hidden;
 }
 
 .container {
     display: flex;
     align-items: flex-start;
-    flex-wrap: wrap;
-    margin: 0 -6px;
     height: 100%;
+    padding: 20px;
+    box-sizing: border-box;
+    overflow: auto;
+}
+
+.container:after {
+    content: '';
+    display: block;
+    height: 100%;
+    width: 20px;
+    padding-left: 20px;
 }
 
 .column {
     display: flex;
     flex-direction: column;
-    flex: 0 0 calc(25% - 12px);
+    flex: 0 0 300px;
     max-height: 100%;
     min-height: 45px;
     margin: 0 6px;
@@ -52,6 +61,14 @@
     background-color: var(--color-background);
     border-radius: var(--border-radius);
     overflow: hidden;
+}
+
+.column:first-child {
+    margin-left: 0;
+}
+
+.column:last-child {
+    margin-right: 0;
 }
 
 .column__title {
@@ -214,6 +231,21 @@
 	background-color: var(--color-dark-grey);
 }
 
+.container::-webkit-scrollbar-track {
+	border-radius: 2px;
+	background-color: var(--color-light-grey);
+}
+
+.container::-webkit-scrollbar {
+    height: 4px;
+	background-color: var(--color-light-grey);
+}
+
+.container::-webkit-scrollbar-thumb {
+	border-radius: 2px;
+	background-color: var(--color-dark-grey);
+}
+
 /* стили для dragula */
 
 .card.gu-transit {
@@ -230,39 +262,6 @@
     cursor: grabbing;
 }
 
-@media (max-width: 1200px) {
-    .container {
-        align-content: flex-start;
-        justify-content: space-between;
-    }
-
-    .column {
-        flex: 1;
-        max-height: calc(50% - 6px);
-        margin-bottom: 6px;
-    }
-}
-
-@media (max-width: 768px) {
-    .container {
-        align-content: flex-start;
-        width: auto;
-    }
-
-    .column {
-        flex: 0 0 calc(50% - 12px);
-        max-height: calc(50% - 6px);
-        margin-bottom: 6px;
-    }
-
-    .column:nth-child(1), .column:nth-child(2) {
-        margin-bottom: 6px;
-    }
-
-    .column:nth-child(3), .column:nth-child(4) {
-        margin-top: 6px;
-    }
-}
 
 @media (max-width: 400px) {
     .kanban {
